css/ckeditor-overrides.css
@import url("https://fonts.googleapis.com/css2?family=DM+Mono:wght@300;400;500&display=swap");

/* Fix CKEditor modal table dialog from displaying borders where it should not */
.cke_dialog td {
  border-bottom: 0 !important;
}

/* Set font over all of the dialog */
.cke_dialog * {
  font-family: var(--gin-font) !important;
}

/* Generic button overrides */
.cke_dialog .cke_dialog_ui_button {
  border-radius: 2.5rem !important;
}

/* Restyle Ok button */
.cke_dialog .cke_dialog_ui_button_ok {
  background-color: var(--gin-color-primary) !important;
}

/* Round inputs */
.cke_dialog input, .cke_dialog select {
  border-radius: 6px !important;
}

/* Mimic selects in other areas, like the divider */
.cke_dialog select.cke_dialog_ui_input_select {
  appearance: none;
  -webkit-appearance: none;
  padding-right: calc(2.5em - 1px) !important;
  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 14 9'%3e%3cpath fill='none' stroke-width='1.5' d='M1 1l6 6 6-6' stroke='%23545560'/%3e%3c/svg%3e") !important;
  background-repeat: no-repeat !important;
  background-position: 100% 50% !important;
  background-size: 2.75em .5625em !important;
  line-height: 1.5em !important;
}

/* Remove the alternating background color */
.cke_dialog tr:nth-child(even) {
  background-color: inherit !important;
}

/* Make the title similar to other titles on the admin side */
.cke_dialog .cke_dialog_title {
  background: var(--mediterranean-blue) !important;
  color: var(--wool) !important;
}

/* Make the body color similar to the other displays on the admin side */
.cke_dialog .cke_dialog_content_body {
  background: var(--gin-bg-layer) !important;
  color: var(--gin-color-text) !important;
}

/* Remake the X button so we can color it white--it was a png before */
.cke_dialog .cke_dialog_close_button {
  background-image: url("data:image/svg+xml,%3Csvg%20width%3D%22100%22%20height%3D%22100%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%3Cline%20x1%3D%220%22%20y1%3D%220%22%20x2%3D%22100%22%20y2%3D%22100%22%20stroke%3D%22white%22%20stroke-width%3D%223%22%2F%3E%0A%20%20%3Cline%20x1%3D%220%22%20y1%3D%22100%22%20x2%3D%22100%22%20y2%3D%220%22%20stroke%3D%22white%22%20stroke-width%3D%223%22%2F%3E%0A%3C%2Fsvg%3E") !important;
}

